<resources>
    <string name="app_name">Trivia</string>
    <string name="titleText">Trivia</string>
    <string name="outOfText">Question: 45/89</string>
    <string name="trueButton">True</string>
    <string name="falseButton">False</string>
    <string name="nextButton">Next</string>
    <string name="placeholder">Hello World, this is where we are going to add the question text</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">incorrect</string>
    <string name="score">0</string>
</resources>