<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#141A33"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/titleText"
            style="@style/MainTextStyle"
            android:layout_marginTop="16dp"
            android:text="@string/titleText"
            android:textColor="@color/lightGrayTextColor"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewOutOf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/outOfText"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleText" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="395dp"
            android:layout_height="153dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="18dp"
            android:backgroundTint="#1B213A"
            android:elevation="12dp"
            app:cardCornerRadius="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewOutOf">

            <TextView
                android:id="@+id/questionTextView"
                style="@style/MainTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/questionTextPadding"
                android:text="@string/placeholder"
                android:textColor="@color/white" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/buttonTrue"
            style="@style/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:text="@string/trueButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <Button
            android:id="@+id/buttonFalse"
            style="@style/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:text="@string/falseButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonTrue" />

        <Button
            android:id="@+id/buttonNext"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:text="@string/nextButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.867"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonFalse" />

        <EditText
            android:id="@+id/score"
            android:layout_width="217dp"
            android:layout_height="63dp"
            android:ems="10"
            android:inputType="number"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonFalse" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>